# offloadmq

./: .dockerignore  .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  MIGRATION_AGENT_TO_DIFFERENT_PROTOCOLS.md  MIGRATION_BACKEND_FROM_AXUM_TO_TRANSPORT_AGNOSTIC.md  Makefile  README.md  Taskfile.yml  VERSION_PINNING.md  count_csv_table.sh  docker-compose.yml  install.sh
agent_v2/agent/: pyproject.toml
agent_v2/agent/src/offloadmq_agent/: __init__.py  agent.py  cap_policy.py  capabilities.py  capabilities_sync.py  client.py  config.py  context.py  custom_caps.py  executor.py  kokoro_config.py  models.py  ollama.py  onnx_models.py  pipeline.py  rescan.py  result_convert.py  settings_util.py  slavemode_policy.py  systeminfo.py  transport_exec.py  transport_sync.py  wire.py
agent_v2/agent/src/offloadmq_agent/data/: fs_utils.py  task_inputs.py  updn.py
agent_v2/agent/src/offloadmq_agent/exec/: __init__.py  custom.py  data_preparation.py  debug.py  docker.py  llm.py  (+8 more)
agent_v2/cli-manager/: _pyi_entry.py  pyproject.toml
agent_v2/cli-manager/src/cli_manager/: _version.py  main.py
agent_v2/core/: pyproject.toml
agent_v2/core/src/offloadmq_core/: __init__.py  agent_log.py  comfy_autowire.py  comfy_service.py  custom_caps_service.py  error_pool.py  executor_pool.py  keep_awake.py  legacy_migration.py  orchestrator.py  scan_state.py  settings.py  startup_mac.py  startup_win.py  systemd_service.py  task_store.py  webui.py
agent_v2/gui-manager/: pyproject.toml
agent_v2/gui-manager/src/gui_manager/: main.py
agent_v2/ui-server/: pyproject.toml
agent_v2/ui-server/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
agent_v2/ui-server/frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
agent_v2/ui-server/src/ui_server/: __init__.py  api.py  main.py  protocol.py  server.py  state.py
oai/backend/: .env.example  .gitignore  Cargo.toml
oai/backend/src/: app.rs  error.rs  main.rs  snowflake.rs  state.rs  storage.rs  version.rs
oai/backend/src/db/: app_settings.rs  chat_attachments.rs  chats.rs  generation_parameters.rs  image_analysis.rs  image_generation.rs  image_worker_logs.rs  img_utils.rs  imggen_capabilities.rs  llm_capabilities.rs  llm_compare.rs  llm_debate.rs  migrator.rs  mod.rs  music_generation.rs  nude_detect.rs  offload_jobs.rs  prompts.rs  tts.rs  user_system_prompts.rs  users.rs
oai/backend/src/jobs/: chat_worker.rs  image_analysis_worker.rs  image_pipeline_worker.rs  img_utils_worker.rs  llm_capability_cleanup_worker.rs  llm_compare_worker.rs  llm_debate_worker.rs  mod.rs  music_generation_worker.rs  nude_detect_worker.rs  tts_worker.rs  worker_runtime.rs
oai/backend/src/middleware/: auth.rs  mod.rs
oai/backend/src/offload/: image_tasks.rs  mod.rs  task_status.rs
oai/backend/src/routes/: admin.rs  auth.rs  chat_attachments.rs  chats.rs  debug.rs  describe.rs  files.rs  health.rs  images.rs  img_utils.rs  job_common.rs  llm_compare.rs  llm_debate.rs  mod.rs  music_generation.rs  names.rs  nude_detect.rs  progress.rs  promptgen.rs  prompts.rs  runners.rs  system_prompts.rs  tasks.rs  tts.rs
oai/backend/src/services/: chat.rs  chat_attachments.rs  connection.rs  debug_offload.rs  describe.rs  image_analysis.rs  image_job_names.rs  image_jobs.rs  image_paths.rs  image_pipeline_params.rs  image_processing.rs  img_utils.rs  k8s_self.rs  llm_compare.rs  llm_debate.rs  llm_text_capabilities.rs  mod.rs  music_generation.rs  nude_detect.rs  offload_factory.rs  offload_job.rs  progress.rs  promptgen.rs  runners.rs  storage.rs  tts.rs
oai/backend/src/ws/: chat.rs  debate.rs  events.rs  mod.rs  promptgen.rs
oai/itests/: .gitignore  pyproject.toml
oai/itests/tests/: conftest.py  helpers.py  test_admin.py  test_auth_change_password.py  test_auth_login.py  test_auth_register.py  test_chats.py  test_files_cleanup.py  test_health.py  test_image_files.py  test_images.py  test_me.py  test_version.py
offload-agent/: .gitignore  Dockerfile  Makefile  README.md  TIER_SYSTEM.md  build-mac.sh  build-windows.ps1  mypy.ini  offload-agent-chatgpt.py  offload-agent-mac.py  offload-agent-win.pyw  offload-agent.py  pyproject.toml  requirements.txt  runtime_hook_ssl.py  streamer-test.py  test_tier_system.py  webui.py  webui_backup.py  webui_comfy.py
offload-agent/app/: _version.py  capabilities.py  cli.py  config.py  core.py  custom_caps.py  httphelpers.py  models.py  ollama.py  onnx_models.py  skills.py  startup_win.py  systeminfo.py  tier.py  transport.py  updater.py  url_utils.py  websocket_client.py
offload-agent/app/data/: fs_utils.py  text_extract.py
offload-agent/app/exec/: custom.py  data_preparation.py  debug.py  docker.py  helpers.py  imggen.py  llm.py  onnx.py  shell.py  shellcmd.py  skill.py  slavemode.py  tts.py
offload-agent/app/exec/imggen/: __init__.py  comfyui.py  executor.py  output.py  workflow.py
offload-agent/app/exec/musicgen/: __init__.py  executor.py  output.py
offload-agent/frontend/: index.html  package-lock.json  package.json  vite.config.js
offload-agent/frontend/src/: CodeEditor.jsx  Dashboard.jsx  index.css  main.jsx
offload-agent/frontend/src/components/: CapabilitiesTab.jsx  ComfyParamMapEditor.jsx  ComfyUITab.jsx  ConfigTab.jsx  ConnectionTab.jsx  CustomTab.jsx  SlavemodeTab.jsx  StatusTab.jsx  SystemTab.jsx
offload-agent/scripts/: diagnose-windows-startup.ps1
offload-agent/workflows/: README.md
offload-agent/workflows/img-utils/depth/: depth.params.json
offload-agent/workflows/img-utils/face_swap/: face_swap.json  face_swap.params.json
offload-agent/workflows/txt2music/ace-step-1.5-xl-turbo/: txt2music.json  txt2music.params.json
offloadmock/: .gitignore  DOCS.md  README.md  Taskfile.yml  pyproject.toml  requirements.txt
offloadmock/offloadmock/: auth.py  config.py  deps.py  errors.py  main.py  responses.py  schemas.py  state.py  task_templates.py  utils.py
offloadmock/offloadmock/routers/: agent.py  client.py  client_storage.py  management.py  root.py  testing.py  ws.py
offloadmock/tests/: test_smoke.py  test_testing_api.py
(+519 files in other folders)
