[package]
name = "offloadmq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
bcrypt = "0.17.0"
bincode = "2.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
hyper = { version = "1.6.0", features = ["full"] }
indexmap = "2.10.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
lru-cache = "0.1.2"
lru_time_cache = "0.11.11"
rand = "0.9.2"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
sled = "0.34.7"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = "1.2.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
