[project]
name = "offload-agent"
version = "0.1.0"
description = "Python agent for OffloadMQ"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "requests>=2.25.0",
    "psutil>=5.8.0",
    "websocket-client>=1.6.0",
    "PyYAML>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "boto3",
    "GPUtil>=1.4.0",
    "pydantic",
    "pynvml>=11.4.0",
    "typer[all]",
    "colorlog",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.1",
]

[tool.pdm]
distribution = false
