[project]
name = "offloadmq-agent"
version = "2.0.0"
description = "Async OffloadMQ agent library"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
ollama = ["aiohttp>=3.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/offloadmq_agent"]

[tool.mypy]
strict = true
python_version = "3.11"
