[project]
name = "offloadmq-agent"
version = "2.0.0"
description = "Async OffloadMQ processing toolkit — client, executors, models"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/offloadmq_agent"]

[tool.mypy]
strict = true
python_version = "3.11"
