[project]
name = "offloadmq-cli"
version = "2.0.0"
description = "CLI manager for OffloadMQ agent v2"
requires-python = ">=3.11"
dependencies = [
    "offloadmq-agent",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
omq = "cli_manager.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_manager"]

[tool.uv.sources]
offloadmq-agent = { workspace = true }
