[project]
name = "offloadmq-cli"
version = "2.0.0"
description = "CLI entry point for the OffloadMQ agent v2"
requires-python = ">=3.11"
dependencies = [
    "offloadmq-core",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
omq = "cli_manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_manager"]

[tool.uv.sources]
offloadmq-core = { workspace = true }
