[project]
name = "offloadmq-core"
version = "2.0.0"
description = "OffloadMQ agent orchestration — settings, polling, parallel execution, task store"
requires-python = ">=3.11"
dependencies = [
    "offloadmq-agent",
    "offloadmq-ui-server",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/offloadmq_core"]

[tool.uv.sources]
offloadmq-agent = { workspace = true }
offloadmq-ui-server = { workspace = true }

[tool.mypy]
strict = true
python_version = "3.11"
