[project]
name = "offloadmq-gui"
version = "2.0.0"
description = "Cross-platform desktop GUI entry point for the OffloadMQ agent v2"
requires-python = ">=3.11"
dependencies = [
    "offloadmq-core",
    "pywebview>=5.0",
]

[project.scripts]
omq-gui = "gui_manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gui_manager"]

[tool.uv.sources]
offloadmq-core = { workspace = true }
