[project]
name = "offloadmq-ui-server"
version = "2.0.0"
description = "FastAPI UI server for OffloadMQ agent v2"
requires-python = ">=3.11"
dependencies = [
    "offloadmq-agent",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
]

[project.scripts]
omq-ui-server = "ui_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ui_server"]

[tool.uv.sources]
offloadmq-agent = { workspace = true }
