[project]
name = "offloadmq-ui-server"
version = "2.0.0"
description = "FastAPI UI server for OffloadMQ agent v2 (library, driven by core)"
requires-python = ">=3.11"
dependencies = [
    "offloadmq-agent",
    "fastapi>=0.111",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ui_server"]

[tool.uv.sources]
offloadmq-agent = { workspace = true }
