[package]
name = "oai-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart", "ws"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
names = { version = "0.14", default-features = false }
opendal = { version = "0.52", default-features = false, features = ["services-fs", "services-s3"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
urlencoding = "2"
rs-vips = "0.7"
kamadak-exif = "0.6"
little_exif = "0.6"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
image = "0.25"
