[project]
name = "oai-itests"
version = "0.1.0"
description = "Integration tests for the OAI backend"
authors = [
    {name = "alexgrek", email = "alexgrek.hq@gmail.com"},
]
dependencies = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-xdist>=3.8.0",
]
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n 4 --dist loadfile"
